# EventAIde

./: .gitignore  README.md  app.ipynb  app.py  city_corrections.ipynb  city_corrections.py  environment.yaml  events_api.ipynb  mcp-config.example.json  pyproject.toml  requirements.txt  t2.py
eventaide_mcp/: __init__.py  server.py  ticketmaster.py
scripts/: run_agents_check.py
src/travel_planner/: __init__.py
src/travel_planner/agents/: __init__.py  budget_optimizer_agent.py  destination_research.py  dining_agent.py  flight_search_agent.py  hotel_search_agent.py  itinerary_planner.py  logistics_agent.py  places_discovery_agent.py  preference_collector.py  show_discovery_agent.py  summary_generator.py  team_orchestrator.py
src/travel_planner/backend/: __init__.py  app.py  schemas.py  service.py
src/travel_planner/config/: defaults.py  settings.py
src/travel_planner/models/: schemas.py
src/travel_planner/orchestration/: __init__.py  agno_runtime.py  pipeline.py
src/travel_planner/providers/: __init__.py  dining_provider.py  flight_provider.py  foursquare_dining_provider.py  geoapify_dining_provider.py  geoapify_hotel_provider.py  geoapify_places_provider.py  hotel_provider.py  places_provider.py  serpapi_flight_provider.py  serpapi_hotel_provider.py  serpapi_util.py  show_provider.py  (+1 more)
tests/: test_geoapify_places_provider.py  test_logging_redaction.py  test_pipeline_scenario_summary.py  test_preference_collector_dates.py  test_schemas.py  test_serpapi_flight_provider.py  test_timeline_first_planner.py  test_ui_costing_flight_context.py  test_us_airports.py
(+11 files in other folders)
