[project]
name = "eventaide"
version = "0.1.0"
description = "EventAIde: discover events (music, sports, concerts) via MCP tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "anyio",
]

[project.optional-dependencies]
dev = []

[project.scripts]
eventaide-mcp = "eventaide_mcp.server:main"

[tool.setuptools.packages.find]
include = ["eventaide_mcp*"]
